<resources>
    <string name="app_name">GradeChaser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_sync">Sync From Wear</string>
    <string name="nav_export">Export to CSV</string>
    <string name="nav_help">Show Help</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_feedback">Send Feedback</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Sync From Wear</item>
        <item>Export to CSV</item>
        <item>Show Help</item>
        <item>Settings</item>
        <item>Send Feedback</item>
    </string-array>

    <!-- Strings related to Settings -->
    <string name="pref_title_enable_wear">Enable wear</string>
    <string name="pref_description_enable_wear">Use android wearable to track climbs</string>

    <string name="pref_description_enable_warmup">Hide higher difficulties until you\'ve properly warmed up</string>
    <string name="pref_title_enable_warmup">Enable warm-up</string>
    <string name="pref_title_maxbouldergrade">Max boulder warmup</string>
    <string name="pref_summary_maxbouldergrade">No bouldering above this grade</string>
    <string name="pref_title_numboulder">Number of boulder problems</string>
    <string name="pref_summary_numboulder">Until you\'ve done this many boulder problems</string>
    <string name="pref_title_maxropesgrade">Max ropes warmup</string>
    <string name="pref_summary_maxropesgrade">No rope climbs above this grade</string>
    <string name="pref_title_numropes">Number of ropes problems </string>
    <string name="pref_summary_numropes">Until you\'ve done this many climbs</string>
    <string name="pref_title_goalGradeBoulder">Target bouldering grade</string>
    <string name="pref_title_goalNumsessionsBoulder">Sessions Per Week</string>
    <string name="pref_title_goalVpointsBoulder">Points per session</string>
    <string name="pref_title_goalNumclimbsBoulder">Problems per session</string>
    <string name="pref_title_goalGradeRopes">Target ropes grade</string>
    <string name="pref_title_goalNumclimbsRopes">Climbs per session</string>
    <string name="pref_title_goalNumsessionsRopes">Sessions per week</string>
    <string name="pref_title_goalVpointsRopes">Points per session</string>
    <item name="mstb_sample_values" type="id" />

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">GradeChaser</string>

    <!-- Login related stuff -->
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_conformation">Confirmation</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_log_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">Username required</string>
    <string name="error_invalid_password">Password required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="activity_sign_in_label">Sign In</string>
    <string name="activity_register_label">Register</string>

    <string name="menu_item_register">Register</string>
    <string name="title_deleted">Deleted</string>
    <string name="release_to_create_item">Release to Create Item</string>
    <string name="pull_to_create_item">Pull to Create Item</string>
    <string name="no_item">There is no item in this list to complete.</string>
    <string name="facebook_app_id">1875213266141907</string>
    <string name="fb_login_protocol_scheme">fb1875213266141907</string>
    <string name="server_client_id">895500465855-0h0gs2qbtkbftb4ohonm3v6kk482s990.apps.googleusercontent.com</string>

    <!-- end login related stuff -->
    <string name="colorchooser_title">Choose a color</string>

</resources>
